Bug 343383 - After activating mouse gestures the selected button to activate a gesture does not respond
Summary: After activating mouse gestures the selected button to activate a gesture doe...
Status: RESOLVED FIXED
Alias: None
Product: khotkeys
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.17.3
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Michael Jansen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-27 18:22 UTC by Filzmaier Josef
Modified: 2019-11-14 21:37 UTC (History)
25 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Filzmaier Josef 2015-01-27 18:22:40 UTC
Today i switched to Plasma 5.2 - First off congrats it is working and looking like a champ!

I was a heavy user of the built-in mouse gestures in KDE SC 4, so i tried to activate them in Plasma 5. After activating the mouse gestures the selected "Mouse Button" does not do anything anymore. (I use "3" on my system, which seems to be my right mouse click button)

It does not matter where i right click after i activated mouse gestures, the click does not have any effect anymore.

Reproducible: Always

Steps to Reproduce:
1. Open Systemsettings
2. Go to "Shortcuts -> Custom Shortcuts -> Settings"
3. Check the Checkbox "Gestures"

Actual Results:  
The selected "Mouse Button" does not do anything

Expected Results:  
If i just click the selected mouse button the usual action should have been triggered. If I drag my mouse in the path of any of the added gestures, the specified command/dbus input/keyboard input should should have been triggered

-
Comment 1 Radim Hopp 2015-02-02 07:58:59 UTC
I have the same problem.
I have plasma 5.2. I've installed it via live distro which dvratil has created (http://www.dvratil.cz/). It's based on Fedora 21.
Comment 2 Martin Kostolný 2015-02-07 23:51:51 UTC
I have this problem, too. I've got Plasma 5.2.0 on Arch Linux.
Comment 3 Richard Feciskanin 2015-02-11 09:37:55 UTC
I have the same problem. Plasma 5.2.0, Frameworks 5.7.0 on Kubuntu 14.10
Comment 4 Christoph Feck 2015-02-15 16:13:24 UTC
Raising severity, since this regression makes that feature unusable.
Comment 5 felix_mauch 2015-04-20 20:18:36 UTC
Well, a starting point could be commit d0cb8217d486901fdef28e26a4f894ae0025aa4a which disables x11Events.

A comment saying "needs porting to QAbstractNativeEventFilter to replace x11Event filtering" is added there, so I guess, that's the best point to start.
Comment 6 Jan Pavlicek 2015-05-18 08:53:37 UTC
Confirming this bug on Archlinux, plasma 5.2. It can be easily reproduced with xev - button chosen as a gesture trigger does not show up in xev output. Moreover, gestures does not respond.
Comment 7 Anton Forstreuter 2015-05-23 09:54:23 UTC
*** This bug has been confirmed by popular vote. ***
Comment 8 Dj YB 2015-06-02 20:15:04 UTC
same problem with kde 5.10 on Fedora 22
Comment 9 Dj YB 2015-06-02 20:38:03 UTC
(In reply to Dj YB from comment #8)
> same problem with kde 5.10 on Fedora 22

correction: plasma version 5.3
Comment 10 chx1975 2015-06-11 19:56:54 UTC
For the sufferers of this: at least crxMouse Chrome Gestures work in Chrome (Gestures for Chrome do not).
Comment 11 Serhiy 2015-08-22 17:04:18 UTC
Have anyone tried switching to easystroke for gestures? Can you confirm this: https://bugs.kde.org/show_bug.cgi?id=346836 ?
Comment 12 Dj YB 2015-08-22 20:43:47 UTC
I have switched to easystrokes, works perfectly, very happy with it.
Comment 13 spinuvit 2015-11-12 15:52:51 UTC
Same problem with 5.15.0 on Kubuntu 15.10. Even worse, there is no way to add new mouse gestures.  Edit menu in "custom shortcuts" dialog doesn't show "New > mouse gesture" option.
Comment 14 Frank Roscher 2016-01-09 12:53:14 UTC
Git commit 57a0c4ecf98f973f2b7a7eeeb4e55213cbd22ec4 by Frank Roscher.
Committed on 09/01/2016 at 11:35.
Pushed by froscher into branch 'master'.

Port mouse gestures to QAbstractNativeEventFilter and reenable them
FEATURE:

M  +1    -2    kcm_hotkeys/hotkeys_context_menu.cpp
M  +37   -25   libkhotkeysprivate/triggers/gestures.cpp
M  +6    -19   libkhotkeysprivate/triggers/gestures.h

http://commits.kde.org/khotkeys/57a0c4ecf98f973f2b7a7eeeb4e55213cbd22ec4
Comment 15 Evstifeev Roman 2016-12-02 18:52:45 UTC
Can anyone plesase reopen this? This bug is still valid for systemsettings5-5.8.2-1.1.x86_64
Comment 16 Filzmaier Josef 2016-12-02 19:29:15 UTC
(In reply to Evstifeev Roman from comment #15)
> Can anyone plesase reopen this? This bug is still valid for
> systemsettings5-5.8.2-1.1.x86_64

Are you sure you have the correct mouse button set? For me it is currently fully functional on 5.8.4, but it also has been functional when i was at 5.8.2
Comment 17 Evstifeev Roman 2016-12-02 19:35:19 UTC
Yes, I tried middle and right button. In either case the button gets "owned" by gestures completely and does not respond to regular clicks anymore.
Comment 18 Manuel 2016-12-11 17:09:30 UTC
In my case I can deal with it pressing Ctrl key + middle button since I started with KDE-Neon 5.7, could it be a Distribution problem?
Comment 19 Evstifeev Roman 2016-12-25 20:10:49 UTC
I have this problem on openSUSE 42.2, so it does not sound like single-distro issue.
Comment 20 Christoph Feck 2016-12-31 20:26:29 UTC
Reopen on request, still needs someone else to confirm the issue is still present.
Comment 21 Dj YB 2017-01-02 20:49:45 UTC
Had this tested again on 
Linux (x86_64) release 4.8.15-200.fc24.x86_64
systemsettings version 5.8.4

The problem still exists. When activating mouse gestures the selected mouse button stops acting on click.
However it is still acting on drag.
Comment 22 Maximilian Hartert 2017-01-02 21:50:53 UTC
I do have the same problem.
But since I also use an (apple) trackpad now, it does not bother me that much anymore.

Plasma 5.8.5
System Settings 5.8.5
Kernel: 4.4-0-57-generic
Kde Neon Developer Stable
Comment 23 Martin Kostolný 2017-01-03 06:22:58 UTC
I, on the other hand, cannot replicate it on Arch Linux. I've created a new user and tried with empty home folder. Activated mouse gestures with mouse button 3 (right mouse button), added a gesture to send keyboard input Ctrl+w and it is successfully closing tabs e.g. in Dolphin. Right mouse button single clicking continues to open context menus.

Package versions:
Plasma 5.8.5
KF 5.29
Xorg (not tested on wayland)

Have you tried with clean config? Probably not related but: what kind of gestures do you have? I'll try to test it on Neon later.
Comment 24 Manuel 2017-01-03 09:14:02 UTC
I have the problem since I started with KDE Neon plasma 5.6 the problem looked like solved in Arch, see 

https://www.reddit.com/r/kde/comments/4gffxp/mouse_gestures_break_middle_click/
Comment 25 Dartmouth 2017-02-25 10:50:04 UTC
I have the same problem under openSUSE Leap 42.2 (and also had it with Leap 42.1)
Whatever mouse button I configure for mouse gestures is unusable for anything else. 

plasmashell version 5.8.3
systemsettings version 5.8.2
KDE Frameworks 5.26.0
Comment 26 Henri K 2017-04-12 10:02:36 UTC
I've have this problem too on openSUSE Tumbleweed.
Plasma 5.9.4, Frameworks 5.32.0, Qt 5.7.1
Comment 27 km 2017-09-29 21:17:36 UTC
*** This bug has been confirmed by popular vote. ***
Comment 28 Alex 2018-08-03 20:48:15 UTC
Confirming using:
  ~ Plasma 5.12.6
  ~ KDE frameworks 5.48.0
  ~ Qt 5.10.1
  ~ Kernel 64 bit 4.17.9
Comment 29 tuxflo 2018-10-22 15:30:36 UTC
Still valid... 
Distribution: KDE Neon (based on 18.04)
Plasma version: 5.14.1
Qt Version: 5.11.2

In the source of khotkeys (libkhotkeysprivate/triggers/gestures.cpp) the variable mouse_replay is set to "false" maybe replaying the button event could fix this?
I'm unable to setup the build env here so I cannot try it on my own :(
Comment 30 alekksander 2018-12-01 12:30:16 UTC
i can confirm this still exist, and successfully prevents me from using kde gestures.
Comment 31 tuxflo 2018-12-01 12:49:26 UTC
@alekksander is there a Desktop Environment that handles mouse gestures better than KDE? Especially when one is using the right mouse button for the gestures?
Comment 32 alekksander 2018-12-01 13:13:36 UTC
using kde neon with plasma 5.14.4

@tuxflo not that i know of but instead of using kde gestures someone suggested trying easystroke. it might be a temporary solution until someone skilled fixes what we have here.
Comment 33 tuxflo 2018-12-01 13:45:01 UTC
I tried easystroke a while ago, I think it had the same problem, but if you can manage to get it to work I'd be very interested :)
Comment 34 Radim Hopp 2018-12-01 19:11:08 UTC
I'm using easystroke since this functionality in KDE is broken... I have no problems with easystroke, but if this would work in KDE I wouldn't need to install easystroke ;-)
Comment 35 alekksander 2018-12-01 20:08:22 UTC
dunno if it's the right place for further discussion about it, but easystroke is not being developed anymore, it's not part of kde and it's crashing sometimes too. it has rocker gestures that work only half way, but it's still half more than kde's gestures. i've looked around for alternative, but there seems to be none. only hope remains in fixing and developing kde gestures if someone has the time and skills for it. unfortunately it's not me. 

@tuxflo
in my case easystroke is working quite okay with RMB, no such problem as described in this bug report. give it a try, it might work.
Comment 36 tuxflo 2018-12-03 17:47:07 UTC
@alekksander I found out that Easystroke was not working because I was inside a VBox VM. On bare metal it works.

But I also found another little tool that just fits my mouse gesture needs and works great: https://github.com/deters/mygestures
It is even possible to start this tool twice with different mouse buttons so one can define mouse gestures for the middle mouse button 2 and other ones for mouse button 3.
Comment 37 george fb 2019-09-23 12:47:27 UTC
This is a packaging problem.

"You should probably open a bug report with your distribution, suggesting that maybe KHotkeys has been built without XTest support (X11_XTest_FOUND needs to be true when building KHotkeys)."
https://www.reddit.com/r/kde/comments/4gffxp/mouse_gestures_break_middle_click/

Didn't work on Solus either.
https://dev.getsol.us/T7959
Comment 38 Rex Dieter 2019-11-14 21:25:05 UTC
I'd argue khotkey's CMakeLists.txt should make this dependency more obvious.

I'll try to come up with a patch/fix
Comment 39 Rex Dieter 2019-11-14 21:37:57 UTC
Looks like someone beat me to it, yay

commit faef67ad1819e9580df52ffb8a8d1cdf726b8375 (origin/Plasma/5.17)
Author: Christophe Giboudeaux <christophe@krop.fr>
Date:   Tue Nov 12 17:22:44 2019 +0100

    Clean up config-X11.h
    
    Summary:
    Khotkeys only requires libX11 and the optional Xtst component.
    
    Report whether the optional Xtst component was found.
    
    Before: -- Found X11: /usr/include
    After: -- Found X11: /usr/include  found components:  Xtst
    
    Subscribers: plasma-devel
    
    Tags: #plasma
    
    Differential Revision: https://phabricator.kde.org/D25275


I think we can consider the issue closed