Port mouse gestures to QAbstractNativeEventFilter and reenable them

BUG: 343383
FEATURE: